# PDA-Peak-Finder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: README.md
docs/: ARCHITECTURE.md  ROADMAP.md
results/: README.md
src/pda_peak_finder/: __init__.py  cli.py  errors.py  models.py  pipeline.py  testing.py
src/pda_peak_finder/export/: __init__.py  csv.py
src/pda_peak_finder/peak_detection/: __init__.py  deconvolution.py  detect.py  filters.py
src/pda_peak_finder/plotting/: __init__.py  core.py
src/pda_peak_finder/reader/: __init__.py  arw.py  base.py
src/pda_peak_finder/spectra/: __init__.py
src/pda_peak_finder/tracking/: __init__.py  config.py  matcher.py
tests/: test_arw.py  test_deconvolution.py  test_export.py  test_height_filter.py  test_labeled_chromatogram.py  test_monitor_filter.py  test_peak_detection.py  test_plotting.py  test_rt_filter.py  test_spectra.py  test_spectral_tracking.py  test_tracking.py
